tester/testsuite/good/intarith5.yal
fn main() -> int {
let x: int = 10;
let y: int = 3;

    printInt(x + y);
    printInt(x - y);
    printInt(x * y);
    printInt(x / y);
    printInt(x % y);

    printInt(-x);

    x++;
    printInt(x);

    y--;
    printInt(y);

    return 0;
}
    
    
    
