tester/testsuite/bad/array04.yal


fn main() -> int {
let b: int = 3;
let c: int = b.length;
  return 0;
}
